styles/main.sass.css
/* ... */
  .preferences ul li {
    padding: 0 1.25rem 0.5rem 1.25rem; }

.user {
  background-color: #DDDDDD;
  box-sizing: border-box;
  overflow: hidden;
  padding: 1rem 2rem; }
  .user .user-photo {
    background: url(../images/user.jpg) center center no-repeat;
    background-size: cover;
    border-radius: 50%;
    float: left;
    height: 4.5rem;
    width: 4.5rem; }
  .user .user-info {
    float: left;
    margin-left: 1rem; }
    .user .user-info #user-id {
      color: #333333;
      font-family: "Roboto Slab", serif;
      font-size: 24px;
      font-size: 1.5rem;
      font-weight: 700;
      text-transform: lowercase; }
    .user .user-info #user-sub {
      color: #333333;
      font-style: italic;
      font-weight: 300; }

.add-event {
  background-color: #FFFFFF;
  padding: 2rem;
  text-align: center; }
  .add-event a {
    border: 2px solid #00ACB2;
    border-radius: 2rem;
    color: #00ACB2;
    font-weight: 500;
    padding: 0.75rem 1rem;
    text-transform: uppercase; }

.following {
  border-bottom: 2px solid #DDDDDD;
  padding-top: 1rem; }
  .following .following-location {
    color: #666666;
    padding-bottom: 1rem; }
  .following:last-child {
    border-bottom: 0;
    margin-bottom: 4rem; }

.toggle {
  float: right; }
  .toggle a {
    color: #00ACB2;
    padding: 2rem; }

.more-info {
  display: none;
  margin: 0 2rem;
  padding-bottom: 2rem; }

.following-time {
  font-style: italic; }

/* Map */
.filter-link {
  background-color: #c4c4c4;
  padding: 0.5rem 0;
  text-align: center; }
  .filter-link a {
    color: #00ACB2;
    text-transform: uppercase; }

.filter {
  background-color: #c4c4c4;
  display: none;
  overflow: hidden;
  padding: 1rem 2rem; }
  .filter .filter-title {
    display: none; }
  .filter ul {
    float: left;
    width: 50%; }
    .filter ul li {
      padding: 0 1.25rem 0.5rem 1.25rem; }

#map {
  height: 18.75rem;
  overflow: hidden; }

.mapEvent {
  border-bottom: 2px solid #DDDDDD;
  padding-top: 1rem; }
  .mapEvent .mapEvent-location {
    color: #666666;
    padding-bottom: 1rem; }
  .mapEvent:last-child {
    border-bottom: 0;
    margin-bottom: 4rem; }

.toggle {
  float: right; }
  .toggle a {
    color: #00ACB2;
    padding: 2rem; }

.mapEvent-time {
  font-style: italic; }

article.mapEvent:nth-child(n+12) {
  display: none; }

/* Map Styles */
/* Footer */
footer {
  background-color: #999;
  clear: both;
  font-weight: 300;
  padding: 1rem;
  text-align: center; }

/* Media Queries */
@media screen and (min-width: 600px) {
  .menu-link {
    display: none; }
  nav.nav-sm {
    display: none; }
  .nav-lg {
    display: inline;
    float: right; }
    .nav-lg ul {
      padding: 1rem 0;
      text-align: center; }
      .nav-lg ul li {
        display: inline;
        padding: 1.25rem; }
        .nav-lg ul li a {
          color: #FFFFFF;
          text-transform: uppercase; }
  .hero {
    padding: 6rem; }
  #tagline {
    font-size: 36px;
    font-size: 2.25rem; }
  #tagline-sub {
    font-size: 18.4px;
    font-size: 1.15rem; }
  .event .toggle {
    display: none; }
  .event .event-photo {
    float: left;
    width: 12rem; }
  .event .event-info {
    float: left;
    width: 25%; }
  .event .more-info {
    display: block;
    padding: 0 0 2rem 12rem; }
  .event:nth-child(odd) .event-photo {
    float: left; }
  .event:nth-child(odd) .event-info {
    float: left;
    width: 25%; }
  .preferences-link {
    display: none; }
  .preferences {
    display: inline-block;
    float: right;
    text-align: left;
    width: 25%; }
    .preferences .preferences-title {
      color: #666666;
      display: block;
      font-weight: 500;
      padding: 0 0 0.5rem 1rem;
      text-transform: uppercase; }
    .preferences ul li {
      display: block; }
  .filter-link {
    display: none; }
  .filter {
    display: inline-block;
    position: absolute;
    left: 0;
    top: 3rem;
    text-align: left;
    width: 10rem; }
    .filter .filter-title {
      color: #666666;
      display: block;
      font-weight: 500;
      padding: 0 0 0.5rem 1rem;
      text-transform: uppercase; }
    .filter ul {
      width: 100%; }
    .filter .event-type {
      padding-left: 1rem; }
  .user {
    padding: 2.75rem 2rem; }
    .user .user-photo {
      height: 6rem;
      margin-left: 12%;
      width: 6rem; }
    .user .user-info {
      margin-left: 1rem; }
      .user .user-info #user-id {
        font-size: 32px;
        font-size: 2rem;
        line-height: 1em;
        max-width: 10rem; }
      .user .user-info #user-sub {
        font-style: italic;
        padding-top: 0.5rem; }
  .add-event {
    margin-right: 12.5%;
    padding-right: 0;
    text-align: right; }
  .following,
  .mapEvent {
    margin: 0 auto;
    width: 75%; }
  #map {
    height: 31.25rem; } }

@media screen and (min-width: 960px) {
  .event {
    margin: 0 auto;
    width: 70%; }
    .event .event-info {
      width: 35%; }
    .event .more-info {
      clear: none;
      display: initial;
      float: left;
      padding: 4rem 0 2rem 0;
      width: 35%; }
    .event:nth-child(odd) .event-info {
      width: 35%; }
    .event:nth-child(odd) .more-info {
      width: 35%; }
  .preferences {
    width: 20%; }
  .user .user-photo {
    margin-left: 25%; }
  .add-event {
    margin-right: 20%; }
  .following,
  .mapEvent {
    width: 60%; }
  .toggle {
    display: none; }
  .more-info {
    display: block; } }

